--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -23,18 +24,57 @@
     </div>
 
     <div class="section1">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtexdt that goes here under the main title. It's a smaller font and the color is
-            lower contrast</p>
-        <button>Sign up</button>
-        <img src="" alt="">
+        <div class="section1-1">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img class="section1-2" src="images/beach.jpg" alt="beach">
 
     </div>
-    <div class="section2"></div>
-    <div class="section3"></div>
-    <div class="section4"></div>
+    <div class="section2">
+        <h2>Some random information</h2>
+        <div class="card-container">
+            <div class="card-and-text-container">
+                <div class="card"></div>
+                <div> This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-and-text-container">
+                <div class="card"></div>
+                <div> This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-and-text-container">
+                <div class="card"></div>
+                <div> This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-and-text-container">
+                <div class="card"></div>
+                <div> This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 
-    <div class="footer"></div>
+    <div class="section3">
+        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div>-Thor, God of Thunder</div>
+    </div>
+
+    <div class="section4">
+        <div class="call-to-action-container">
+            <div class="text-container">
+                <div class="call-to-action">Call to action! It's time!</div>
+                <p>Sign up for our product by clicking that button over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+
+    </div>
+
+    <div class="footer">
+        <div>Copyright © The Odin Project 2021</div>
+    </div>
 
 
 
